Last changes, added comments
